# bitbag

./: Cargo.toml  README.md  README.tpl
bitbag/: Cargo.toml
bitbag-derive/: Cargo.toml
bitbag-derive/src/: lib.rs
bitbag-derive/trybuild/fail/: constant_resolution.rs  constant_resolution.stderr  contains_overlapping_variants.rs  contains_overlapping_variants.stderr  just_overlapping_variants.rs  just_overlapping_variants.stderr  one_variant_with_zero.rs  one_variant_with_zero.stderr  single_variant_with_zero.rs  single_variant_with_zero.stderr
bitbag/src/: bitwise.rs  iter.rs  lib.rs
bitbag_derive/: Cargo.toml
bitbag_derive/src/: lib.rs
src/: bitwise.rs  impls.rs  iter.rs  lib.rs  main.rs
