[package]
name = "bitbag"
version = "0.3.0"
edition = "2018"
description = "A useful struct for dealing with bit flags"
license = "MIT"
repository = "https://github.com/aatifsyed/bitbag"
documentation = "https://docs.rs/bitbag"
authors = ["Aatif Syed <aatif@aatifsyed.uk>"]

[dependencies]
bitbag_derive = { path = "bitbag-derive", version = "=0.3.0" }

[features]
default = ["std"]
std = []

[dev-dependencies]
derive-quickcheck-arbitrary = "0.1.3"
quickcheck = "1.0.3"

[workspace]
members = ["bitbag-derive"]
