[package]
name = "bitbag-derive"
version = "0.2.1"
edition = "2018"
description = "Derive macros for the bitbag crate"
license = "MIT"
repository = "https://github.com/aatifsyed/bitbag"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0.53"
quote = "1.0.9"
syn = "2.0.9"

[dev-dependencies]
trybuild = "1.0.80"
