[package]
name = "bitbag"
version = "0.2.1"
edition = "2018"
description = "A useful struct for dealing with bit flags"
license = "MIT"
repository = "https://github.com/aatifsyed/bitbag"
documentation = "https://docs.rs/bitbag"
authors = ["Aatif Syed <aatif@aatifsyed.uk>"]
# generate the readme with:
# cargo readme --project-root bitbag --template ../README.tpl > README.md
readme = "../README.md"

[dependencies]
derive_more = "0.99.16"
num = "0.4.0"
strum = { version = "0.21.0", features = ["derive"] }
bitbag_derive = { path = "../bitbag_derive", version = "0.2.1" }
itertools = "0.10.5"
bit-iter = "1.1.1"

[dev-dependencies]
anyhow = "1.0.42"
bitflags = "1.2.1"
indoc = "1.0.8"
