[package]
name = "bitbag"
version = "0.2.1"
edition = "2018"
description = "A useful struct for dealing with bit flags"
license = "MIT"
repository = "https://github.com/aatifsyed/bitbag"
documentation = "https://docs.rs/bitbag"
authors = ["Aatif Syed <aatif@aatifsyed.uk>"]
# generate the readme with:
# cargo readme --project-root bitbag --template ../README.tpl > README.md
readme = "../README.md"

[dependencies]
num = "0.4.0"
bitbag-derive = { path = "../bitbag-derive" }
itertools = "0.10.5"

[dev-dependencies]
bitflags = "1.2.1"
indoc = "1.0.8"
