[package]
name = "bitbag_derive"
version = "0.1.0"
edition = "2018"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.14"
pretty_env_logger = "0.4.0"
quote = "1.0.9"
syn = { version = "1.0.74", features = ["extra-traits"] }
