[package]
name = "bitbag_derive"
version = "0.2.0"
edition = "2018"
description = "Derive macros for the bitbag crate"
license = "MIT"
repository = "https://github.com/aatifsyed/bitbag"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.14"
pretty_env_logger = "0.4.0"
proc-macro-error = "1.0.4"
quote = "1.0.9"
syn = { version = "1.0.74", features = ["extra-traits"] }
